@@ -72,11 +72,13 @@ for (const c in constructorProperties) {
             assert.throws(() => new WebAssembly[c](new WebAssembly.Module(emptyModuleArray), invalid), TypeError, `second argument to WebAssembly.Instance must be undefined or an Object (evaluating 'new WebAssembly[c](new WebAssembly.Module(emptyModuleArray), invalid)')`);
         assert.isNotUndef(instance.exports);
         checkOwnPropertyDescriptor(instance, "exports", { typeofvalue: "object", writable: true, configurable: true, enumerable: true });
-        // FIXME these should pass, requires a module namespace object. https://bugs.webkit.org/show_bug.cgi?id=165121
-        // assert.isUndef(instance.exports.__proto__);
-        // assert.eq(Reflect.isExtensible(instance.exports), false);
-        // assert.eq(Symbol.iterator in instance.exports, true);
-        // assert.eq(Symbol.toStringTag in instance.exports, true);
+        assert.isUndef(instance.exports.__proto__);
+        assert.eq(Reflect.isExtensible(instance.exports), false);
+        assert.eq(Symbol.iterator in instance.exports, false);
+        assert.eq(Symbol.toStringTag in instance.exports, true);
+        assert.eq(Object.getOwnPropertySymbols(instance.exports).length, 1);
+        assert.eq(Object.getOwnPropertySymbols(instance.exports)[0], Symbol.toStringTag);
+        assert.throws(() => instance.exports[Symbol.toStringTag] = 42, TypeError, `Attempted to assign to readonly property.`);
         break;
     case "Memory":
         new WebAssembly.Memory({initial: 20});
